--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -5,25 +5,31 @@
   abbr = "arXiv",
   url = "https://arxiv.org/pdf/2305.14328.pdf",
   title={Empowering LLM-based Machine Translation with Cultural Awareness},
-  author={Binwei Yao, Ming Jiang, Diyi Yang and Junjie Hu },
+  author={Yao, Binwei and Jiang, Ming and Yang, Diyi and Hu, Junjie},
   year={2023},
   journal={arXiv preprint arXiv:2305.14328}
 }
 
-@article{chaudhary2019ariel,
+@article{chuang2023evaluating,
   abbr = "arXiv",
-  url = "https://arxiv.org/pdf/1902.08899.pdf",
-  title={The ARIEL-CMU systems for LoReHLT18},
-  author={Chaudhary, Aditi and Dalmia, Siddharth and Hu, Junjie and Li, Xinjian and Matthews, Austin and Muis, Aldrian Obaja and Otani, Naoki and Rijhwani, Shruti and Sheikh, Zaid and Vyas, Nidhi and others},
-  journal={arXiv preprint arXiv:1902.08899},
-  year={2019}
+  title={Evaluating LLM Agent Group Dynamics against Human Group Dynamics: A Case Study on Wisdom of Partisan Crowds},
+  author={Chuang, Yun-Shiuan and Suresh, Siddharth and Harlalka, Nikunj and Goyal, Agam and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
+  journal={arXiv preprint arXiv:2311.09665},
+  year={2023}
 }
 
-@article{zhao2017principled,
+@article{chuang2023evolving,
   abbr = "arXiv",
-  url = "https://arxiv.org/pdf/1705.09011.pdf",
-  title={Principled hybrids of generative and discriminative domain adaptation},
-  author={Zhao, Han and Zhu, Zhenyao and Hu, Junjie and Coates, Adam and Gordon, Geoff},
-  journal={arXiv preprint arXiv:1705.09011},
-  year={2017}
+  title={Evolving Domain Adaptation of Pretrained Language Models for Text Classification},
+  author={Chuang, Yun-Shiuan and Wu, Yi and Gupta, Dhruv and Uppaal, Rheeya and Kumar, Ananya and Sun, Luhang and Sreedhar, Makesh Narsimhan and Yang, Sijia and Rogers, Timothy T and Hu, Junjie},
+  journal={arXiv preprint arXiv:2311.09661},
+  year={2023}
+}
+
+@article{chuang2023simulating,
+  abbr = "arXiv",
+  title={Simulating Opinion Dynamics with Networks of LLM-based Agents},
+  author={Chuang, Yun-Shiuan and Goyal, Agam and Harlalka, Nikunj and Suresh, Siddharth and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
+  journal={arXiv preprint arXiv:2311.09618},
+  year={2023}
 }
