--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
 
 @inproceedings{gowtham2023,
   abbr = "ACL",
+  url = "https://aclanthology.org/2023.acl-long.642.pdf",
   title={Single Sequence Prediction over Reasoning Graphs for Multi-hop QA},
   author={Ramesh, Gowtham and Sreedhar, Makesh Narsimhan and Hu, Junjie},
   booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
@@ -23,6 +24,7 @@
 
 @inproceedings{rheeya2023,
   abbr = "ACL",
+  url = "https://aclanthology.org/2023.acl-long.717.pdf",
   title={Is Fine-tuning Needed? Pre-trained Language Models Are Near Perfect for Out-of-Domain Detection},
   author={Rheeya Uppaal and Junjie Hu and Yixuan Li},
   booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
@@ -40,8 +42,9 @@
   publisher = "Association for Computational Linguistics",
 }
 
-@inproceedings{rheeya2023,
+@inproceedings{tim2023,
   abbr = "ACL",
+  url = "https://aclanthology.org/2023.findings-acl.158.pdf",
   title={Multimodal Prompt Retrieval for Generative Visual Question Answering},
   author={Timothy Ossowski and Junjie Hu},
   booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics (ACL Findings)",
@@ -51,7 +54,7 @@
 
 @inproceedings{Dinh2022UtilizingLP,
   abbr = "EMNLP",
-  url = "",
+  url = "https://aclanthology.org/2022.findings-emnlp.273.pdf",
   title={Beyond Counting Datasets: Investigating Multilingual Dataset Construction and Necessary Resources},
   author={Xinyan Yu and Trina Chatterjee and Akari Asai and Junjie Hu and Eunsol Choi},
   year={2022},
@@ -62,7 +65,7 @@
 
 @inproceedings{Dinh2022UtilizingLP,
   abbr = "EMNLP",
-  url = "https://arxiv.org/pdf/2205.11616.pdf",
+  url = "https://aclanthology.org/2022.findings-emnlp.12.pdf",
   title={Utilizing Language-Image Pretraining for Efficient and Robust Bilingual Word Alignment},
   author={Tuan Dinh and Jy-yong Sohn and Shashank Rajput and Timothy Ossowski and Yifei Ming and Junjie Hu and Dimitris Papailiopoulos and Kangwook Lee},
   year={2022},
@@ -72,6 +75,7 @@
 
 @article{li2022vpumn,
   abbr={IEEE TPAMI},
+  url = "https://ieeexplore.ieee.org/document/9792411",
   title={Video Pivoting Unsupervised Multi-modal Neural
 Machine Translation},
   author={Li, Mingjie, and Huang, Po-Yao, and Chang, Xiaojun, and Hu, Junjie, and Yang, Yi, and Hauptmann, Alex},
