--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -12,6 +12,7 @@
 
 @article{chuang2023evaluating,
   abbr = "arXiv",
+  url = "https://arxiv.org/pdf/2311.09665.pdf",
   title={Evaluating LLM Agent Group Dynamics against Human Group Dynamics: A Case Study on Wisdom of Partisan Crowds},
   author={Chuang, Yun-Shiuan and Suresh, Siddharth and Harlalka, Nikunj and Goyal, Agam and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
   journal={arXiv preprint arXiv:2311.09665},
@@ -20,6 +21,7 @@
 
 @article{chuang2023evolving,
   abbr = "arXiv",
+  url = "https://arxiv.org/pdf/2311.09661.pdf",
   title={Evolving Domain Adaptation of Pretrained Language Models for Text Classification},
   author={Chuang, Yun-Shiuan and Wu, Yi and Gupta, Dhruv and Uppaal, Rheeya and Kumar, Ananya and Sun, Luhang and Sreedhar, Makesh Narsimhan and Yang, Sijia and Rogers, Timothy T and Hu, Junjie},
   journal={arXiv preprint arXiv:2311.09661},
@@ -28,6 +30,7 @@
 
 @article{chuang2023simulating,
   abbr = "arXiv",
+  url = "https://arxiv.org/pdf/2311.09618.pdf",
   title={Simulating Opinion Dynamics with Networks of LLM-based Agents},
   author={Chuang, Yun-Shiuan and Goyal, Agam and Harlalka, Nikunj and Suresh, Siddharth and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
   journal={arXiv preprint arXiv:2311.09618},
