--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@inproceedings{ruixue2024,
+  abbr = "EACL",
+  url = "https://arxiv.org/abs/2402.00232",
+  title={Learning Label Hierarchy with Supervised Contrastive Learning},
+  author={Lian, Ruixue and Sethares, William A. and Hu, Junjie},
+  booktitle = "Proceedings of the 18th Conference of the European Chapter
+of the Association for Computational Linguistics",
+  year = "2024",
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{lu2023,
   abbr = "CSCW",
   title={MetaWriter: Exploring the Potential and Perils of AI Writing Support in Scientific Peer Review},
