--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,5 +1,28 @@
 ---
 ---
+@article{ossowski2024prompting,
+  abbr = "arXiv",
+  title={Prompting Large Vision-Language Models for Compositional Reasoning},
+  author={Ossowski, Timothy and Jiang, Ming and Hu, Junjie},
+  journal={arXiv preprint arXiv:2401.11337},
+  year={2024}
+}
+
+@article{sun2024chatbot,
+  abbr = "arXiv",
+  title={Chatbot Meets Pipeline: Augment Large Language Model with Definite Finite Automaton},
+  author={Sun, Yiyou and Hu, Junjie and Cheng, Wei and Chen, Haifeng},
+  journal={arXiv preprint arXiv:2402.04411},
+  year={2024}
+}
+
+@article{lei2023cfbenchmark,
+  abbr = "arXiv",
+  title={CFBenchmark: Chinese Financial Assistant Benchmark for Large Language Model},
+  author={Lei, Yang and Li, Jiangtong and Jiang, Ming and Hu, Junjie and Cheng, Dawei and Ding, Zhijun and Jiang, Changjun},
+  journal={arXiv preprint arXiv:2311.05812},
+  year={2023}
+}
 
 @article{binwei2023,
   abbr = "arXiv",
