--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,37 @@
 ---
 ---
 
+@inproceedings{chuang2023simulating,
+  abbr = "NAACL",
+  url = "https://arxiv.org/pdf/2311.09618.pdf",
+  title={Simulating Opinion Dynamics with Networks of LLM-based Agents},
+  author={Chuang, Yun-Shiuan and Goyal, Agam and Harlalka, Nikunj and Suresh, Siddharth and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
+  booktitle = "Findings of the 2024 Conference of the North {A}merican Chapter of the Association for Computational Linguistics",
+  year = "2024",
+  publisher = "Association for Computational Linguistics",
+}
+
+@inproceedings{harmon2024,
+  abbr = "NAACL",
+  url = "",
+  title={How does Multi-Task Training Affect Transformer In-Context Capabilities? Investigations with Function Classes},
+  author={Bhasin, Harmon and Ossowski, Timothy and Zhong, Yiqiao and Hu, Junjie},
+  booktitle = "Proceedings of the 2024 Conference of the North {A}merican Chapter of the Association for Computational Linguistics",
+  year = "2024",
+  publisher = "Association for Computational Linguistics",
+}
+
+
+@inproceedings{zihan2024,
+  abbr = "CVPR",
+  url = "",
+  title={Lookahead Exploration with Neural Radiance Representation for Continuous Vision-Language Navigation},
+  author={Wang, Zihan and Li, Xiangyang and Yang, Jiahao and Liu, Yeqi and Hu, Junjie and Jiang, Ming and Jiang, Shuqiang},
+  booktitle = "The IEEE/CVF Conference on Computer Vision and Pattern Recognition",
+  year = "2024",
+  publisher = "",
+}
+
 @inproceedings{ruixue2024,
   abbr = "EACL",
   url = "https://arxiv.org/abs/2402.00232",
@@ -12,12 +43,12 @@ of the Association for Computational Linguistics",
   publisher = "Association for Computational Linguistics",
 }
 
-@inproceedings{lu2023,
+@inproceedings{lu2024,
   abbr = "CSCW",
   title={MetaWriter: Exploring the Potential and Perils of AI Writing Support in Scientific Peer Review},
   author={Sun, Lu and Tao, Stone and Hu, Junjie and Dow, Steven},
   booktitle = "Proceedings of The 26th ACM Conference on Computer-Supported Cooperative Work and Social Computing",
-  year = "2023",
+  year = "2024",
   publisher = "ACM",
 }
 
