--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,7 +94,18 @@ of the Association for Computational Linguistics",
   publisher = "Association for Computational Linguistics",
 }
 
-@inproceedings{Dinh2022UtilizingLP,
+@inproceedings{chuang2023evolving,
+  abbr = "WS",
+  url = "https://arxiv.org/pdf/2311.09661.pdf",
+  title={Evolving Domain Adaptation of Pretrained Language Models for Text Classification},
+  author={Chuang, Yun-Shiuan and Wu, Yi and Gupta, Dhruv and Uppaal, Rheeya and Kumar, Ananya and Sun, Luhang and Sreedhar, Makesh Narsimhan and Yang, Sijia and Rogers, Timothy T and Hu, Junjie},
+  booktitle = "NeurIPS Workshop on Distribution Shifts, 37th Conference on Neural Information Processing Systems.",
+  year = "2023",
+  publisher = "Neural Information Processing Systems",
+  year={2023}
+}
+
+@inproceedings{xinyan2022,
   abbr = "EMNLP",
   url = "https://aclanthology.org/2022.findings-emnlp.273.pdf",
   title={Beyond Counting Datasets: Investigating Multilingual Dataset Construction and Necessary Resources},
