--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,10 +1,20 @@
 ---
 ---
+@article{ding2024data,
+  abbr = "arXiv",
+  title={Data augmentation using llms: Data perspectives, learning paradigms and challenges},
+  author={Ding, Bosheng and Qin, Chengwei and Zhao, Ruochen and Luo, Tianze and Li, Xinze and Chen, Guizhen and Xia, Wenhan and Hu, Junjie and Luu, Anh Tuan and Joty, Shafiq},
+  journal={arXiv preprint arXiv:2403.02990},
+  url={https://arxiv.org/abs/2403.02990},
+  year={2024}
+}
+
 @article{ossowski2024prompting,
   abbr = "arXiv",
   title={Prompting Large Vision-Language Models for Compositional Reasoning},
   author={Ossowski, Timothy and Jiang, Ming and Hu, Junjie},
   journal={arXiv preprint arXiv:2401.11337},
+  url={https://arxiv.org/abs/2401.11337},
   year={2024}
 }
 
@@ -13,6 +23,7 @@
   title={Chatbot Meets Pipeline: Augment Large Language Model with Definite Finite Automaton},
   author={Sun, Yiyou and Hu, Junjie and Cheng, Wei and Chen, Haifeng},
   journal={arXiv preprint arXiv:2402.04411},
+  url={https://arxiv.org/abs/2402.04411},
   year={2024}
 }
 
@@ -21,6 +32,7 @@
   title={CFBenchmark: Chinese Financial Assistant Benchmark for Large Language Model},
   author={Lei, Yang and Li, Jiangtong and Jiang, Ming and Hu, Junjie and Cheng, Dawei and Ding, Zhijun and Jiang, Changjun},
   journal={arXiv preprint arXiv:2311.05812},
+  url={https://arxiv.org/abs/2311.05812},
   year={2023}
 }
 
@@ -42,20 +54,4 @@
   year={2023}
 }
 
-@article{chuang2023evolving,
-  abbr = "arXiv",
-  url = "https://arxiv.org/pdf/2311.09661.pdf",
-  title={Evolving Domain Adaptation of Pretrained Language Models for Text Classification},
-  author={Chuang, Yun-Shiuan and Wu, Yi and Gupta, Dhruv and Uppaal, Rheeya and Kumar, Ananya and Sun, Luhang and Sreedhar, Makesh Narsimhan and Yang, Sijia and Rogers, Timothy T and Hu, Junjie},
-  journal={arXiv preprint arXiv:2311.09661},
-  year={2023}
-}
 
-@article{chuang2023simulating,
-  abbr = "arXiv",
-  url = "https://arxiv.org/pdf/2311.09618.pdf",
-  title={Simulating Opinion Dynamics with Networks of LLM-based Agents},
-  author={Chuang, Yun-Shiuan and Goyal, Agam and Harlalka, Nikunj and Suresh, Siddharth and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
-  journal={arXiv preprint arXiv:2311.09618},
-  year={2023}
-}
