--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@inproceedings{chuang2023evaluating,
+  abbr = "CogSci",
+  url = "https://arxiv.org/pdf/2311.09665.pdf",
+  title={Evaluating LLM Agent Group Dynamics against Human Group Dynamics: A Case Study on Wisdom of Partisan Crowds},
+  author={Chuang, Yun-Shiuan and Suresh, Siddharth and Harlalka, Nikunj and Goyal, Agam and Hawkins, Robert and Yang, Sijia and Shah, Dhavan and Hu, Junjie and Rogers, Timothy T},
+  booktitle={The Annual Conference of the Cognitive Science Society (CogSci).},
+  year={2024},
+}
 
 @inproceedings{chuang2023simulating,
   abbr = "NAACL",
