--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+
+@inproceedings{sun2024chatbot,
+  abbr = "ICML",
+  url = "https://arxiv.org/pdf/2402.04411",
+  title={Chatbot Meets Pipeline: Augment Large Language Model with Definite Finite Automaton},
+  author={Sun, Yiyou and Hu, Junjie and Cheng, Wei and Chen, Haifeng},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  year={2024}
+}
+
 @inproceedings{chuang2023evaluating,
   abbr = "CogSci",
   url = "https://arxiv.org/pdf/2311.09665.pdf",
@@ -21,7 +31,7 @@
 
 @inproceedings{harmon2024,
   abbr = "NAACL",
-  url = "",
+  url = "https://arxiv.org/pdf/2404.03558",
   title={How does Multi-Task Training Affect Transformer In-Context Capabilities? Investigations with Function Classes},
   author={Bhasin, Harmon and Ossowski, Timothy and Zhong, Yiqiao and Hu, Junjie},
   booktitle = "Proceedings of the 2024 Conference of the North {A}merican Chapter of the Association for Computational Linguistics",
@@ -32,7 +42,7 @@
 
 @inproceedings{zihan2024,
   abbr = "CVPR",
-  url = "",
+  url = "https://arxiv.org/pdf/2404.01943",
   title={Lookahead Exploration with Neural Radiance Representation for Continuous Vision-Language Navigation},
   author={Wang, Zihan and Li, Xiangyang and Yang, Jiahao and Liu, Yeqi and Hu, Junjie and Jiang, Ming and Jiang, Shuqiang},
   booktitle = "The IEEE/CVF Conference on Computer Vision and Pattern Recognition",
