--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -2,10 +2,10 @@
 ---
 @article{ding2024data,
   abbr = "arXiv",
-  title={Data augmentation using llms: Data perspectives, learning paradigms and challenges},
+  title={Data Augmentation using LLMs: Data Perspectives, Learning Paradigms and Challenges},
   author={Ding, Bosheng and Qin, Chengwei and Zhao, Ruochen and Luo, Tianze and Li, Xinze and Chen, Guizhen and Xia, Wenhan and Hu, Junjie and Luu, Anh Tuan and Joty, Shafiq},
   journal={arXiv preprint arXiv:2403.02990},
-  url={https://arxiv.org/abs/2403.02990},
+  url={https://arxiv.org/pdf/2403.02990},
   year={2024}
 }
 
@@ -14,7 +14,7 @@
   title={Prompting Large Vision-Language Models for Compositional Reasoning},
   author={Ossowski, Timothy and Jiang, Ming and Hu, Junjie},
   journal={arXiv preprint arXiv:2401.11337},
-  url={https://arxiv.org/abs/2401.11337},
+  url={https://arxiv.org/pdf/2401.11337},
   year={2024}
 }
 
@@ -23,7 +23,7 @@
   title={CFBenchmark: Chinese Financial Assistant Benchmark for Large Language Model},
   author={Lei, Yang and Li, Jiangtong and Jiang, Ming and Hu, Junjie and Cheng, Dawei and Ding, Zhijun and Jiang, Changjun},
   journal={arXiv preprint arXiv:2311.05812},
-  url={https://arxiv.org/abs/2311.05812},
+  url={https://arxiv.org/pdf/2311.05812},
   year={2023}
 }
 
