--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{ding2024data,
+  abbr = "ACL",
+  title={Data Augmentation using LLMs: Data Perspectives, Learning Paradigms and Challenges},
+  author={Ding, Bosheng and Qin, Chengwei and Zhao, Ruochen and Luo, Tianze and Li, Xinze and Chen, Guizhen and Xia, Wenhan and Hu, Junjie and Luu, Anh Tuan and Joty, Shafiq},
+  booktitle = "Findings of the 62nd Annual Meeting of the Association for Computational Linguistics",
+  year = "2024",
+  publisher = "Association for Computational Linguistics",
+  url={https://arxiv.org/pdf/2403.02990},
+}
+
 @inproceedings{sun2024chatbot,
   abbr = "ICML",
   url = "https://arxiv.org/pdf/2402.04411",
@@ -77,7 +87,7 @@ of the Association for Computational Linguistics",
   url = "https://aclanthology.org/2023.acl-long.642.pdf",
   title={Single Sequence Prediction over Reasoning Graphs for Multi-hop QA},
   author={Ramesh, Gowtham and Sreedhar, Makesh Narsimhan and Hu, Junjie},
-  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics",
   year = "2023",
   publisher = "Association for Computational Linguistics",
 }
@@ -87,7 +97,7 @@ of the Association for Computational Linguistics",
   url = "https://aclanthology.org/2023.acl-long.717.pdf",
   title={Is Fine-tuning Needed? Pre-trained Language Models Are Near Perfect for Out-of-Domain Detection},
   author={Rheeya Uppaal and Junjie Hu and Yixuan Li},
-  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics",
   year = "2023",
   publisher = "Association for Computational Linguistics",
 }
@@ -97,7 +107,7 @@ of the Association for Computational Linguistics",
   url = "https://arxiv.org/pdf/2205.11490.pdf",
   title={Local Byte Fusion for Neural Machine Translation},
   author={Sreedhar, Makesh Narsimhan, and Wan, Xiangpeng, and Cheng, Yu, and Hu, Junjie},
-  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics",
+  booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics",
   year = "2023",
   publisher = "Association for Computational Linguistics",
 }
@@ -107,7 +117,7 @@ of the Association for Computational Linguistics",
   url = "https://aclanthology.org/2023.findings-acl.158.pdf",
   title={Multimodal Prompt Retrieval for Generative Visual Question Answering},
   author={Timothy Ossowski and Junjie Hu},
-  booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics (ACL Findings)",
+  booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (ACL Findings)",
   year = "2023",
   publisher = "Association for Computational Linguistics",
 }
@@ -164,7 +174,7 @@ Machine Translation},
   url = "https://aclanthology.org/2022.acl-long.123.pdf",
   title = {DEEP: DEnoising Entity Pre-training for Neural Machine Translation},
   author = {Junjie Hu and Hiroaki Hayashi and Kyunghyun Cho and Graham Neubig},
-  booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+  booktitle = "Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics",
   month = jul,
   year = "2022",
   address = "Online",
@@ -176,7 +186,7 @@ Machine Translation},
   url = "https://aclanthology.org/2022.acl-long.115.pdf",
   title={GlobalWoZ: Globalizing MultiWoZ to Develop Multilingual Task-Oriented Dialogue Systems},
   author={Bosheng Ding and Junjie Hu and Lidong Bing and Sharifah Aljunied Mahani and Shafiq R. Joty and Luo Si and Chunyan Miao},
-  booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+  booktitle = "Proceedings of the 60th Annual Meeting of the Association for Computational Linguistics",
   month = jul,
   year = "2022",
   address = "Online",
