--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{tim2024olive,
+  abbr = "ACL",
+  title={OLIVE: Object Level In-Context Visual Embeddings},
+  author={Ossowski, Timothy and Hu, Junjie},
+  booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics",
+  year = "2024",
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{ding2024data,
   abbr = "ACL",
   title={Data Augmentation using LLMs: Data Perspectives, Learning Paradigms and Challenges},
