--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{li2024well,
+  abbr = "COLM",
+  title={How Well Do LLMs Identify Cultural Unity in Diversity?},
+  author={Li, Jialin and Wang, Junli and Hu, Junjie and Jiang, Ming},
+  booktitle={The first Conference of Language Modeling},
+  year={2024}
+}
+}
+
 @inproceedings{tim2024olive,
   abbr = "ACL",
   title={OLIVE: Object Level In-Context Visual Embeddings},
