--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,37 @@
 ---
 ---
 
+Mitigating Fine-tuning based Jailbreak Attack with Backdoor Enhanced Safety Alignment
+
+@inproceedings{wang2024,
+  abbr = "NeurIPS",
+  url = "https://arxiv.org/pdf/2402.14968.pdf",
+  title={Mitigating Fine-tuning based Jailbreak Attack with Backdoor Enhanced Safety Alignment},
+  author={Wang, Jiongxiao and Li, Jiazhao and Li, Yiquan and Qi, Xiangyu and Chen, Muhao and Hu, Junjie and Li, Yixuan and Li, Bo and Xiao, Chaowei},
+  year={2024},
+  booktitle = {Proceedings of the Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS)}
+}
+
+@inproceedings{binwei2024,
+  abbr = "EMNLP",
+  url = "https://arxiv.org/pdf/2305.14328.pdf",
+  title={Benchmarking Machine Translation with Cultural Awareness},
+  author={Yao, Binwei and Jiang, Ming and Yang, Diyi and Hu, Junjie},
+  year={2024},
+  booktitle = {Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP Findings)},
+  publisher = "Association for Computational Linguistics",
+}
+
+@inproceedings{sean2024,
+  abbr = "EMNLP",
+  url = "https://arxiv.org/pdf/2305.14328.pdf",
+  title={Beyond Demographics: Aligning Role-playing LLM-based Agents Using Human Belief Networks},
+  author={Yun-Shiuan Chuang and Zach Studdiford and Krirk Nirunwiroj and Agam Goyal and Vincent V. Frigo and Sijia Yang and Dhavan V. Shah and Junjie Hu and Timothy T. Rogers},
+  year={2024},
+  booktitle = {Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing (EMNLP Findings)},
+  publisher = "Association for Computational Linguistics",
+}
+
 @inproceedings{li2024well,
   abbr = "COLM",
   title={How Well Do LLMs Identify Cultural Unity in Diversity?},
@@ -8,7 +39,7 @@
   booktitle={The first Conference of Language Modeling},
   year={2024}
 }
-}
+
 
 @inproceedings{tim2024olive,
   abbr = "ACL",
