--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,6 +1,29 @@
 ---
 ---
 
+@article{uppaal2025,
+  abbr = "arXiv",
+  title={DeTox: Toxic Subspace Projection for Model Editing},
+  author={Rheeya Uppaal and Apratim Dey and Yiting He and Yiqiao Zhong and Junjie Hu},
+  year={2024},
+  journal={arXiv preprint arXiv:2410.07553},
+}
+
+@article{tim2025,
+  abbr = "arXiv",
+  title={{COMMA}: A Communicative Multimodal Multi-Agent Benchmark},
+  author={Timothy Ossowski and Jixuan Chen and Danyal Maqbool and Zefan Cai and Tyler J. Bradshaw and Junjie Hu},
+  year={2024},
+  journal={arXiv preprint arXiv:2410.07553},
+}
+
+@article{zhang2024pyramidkv,
+  abbr = "arXiv",
+  title={PyramidKV: Dynamic KV Cache Compression based on Pyramidal Information Funneling},
+  author={Cai, Zefan and Zhang, Yichi and Gao, Bofei and Liu, Tianyu and Lu, Keming and Xiong, Wayne and Dong, Yue and Hu, Junjie and Xiao, Wen},
+  journal={arXiv preprint arXiv:2406.02069},
+  year={2024}
+}
 
 @article{ossowski2024prompting,
   abbr = "arXiv",
@@ -12,14 +35,7 @@
 }
 
 
-@article{binwei2023,
-  abbr = "arXiv",
-  url = "https://arxiv.org/pdf/2305.14328.pdf",
-  title={Empowering LLM-based Machine Translation with Cultural Awareness},
-  author={Yao, Binwei and Jiang, Ming and Yang, Diyi and Hu, Junjie},
-  year={2023},
-  journal={arXiv preprint arXiv:2305.14328}
-}
+
 
 
 
