--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -7,6 +7,7 @@
   author={Rheeya Uppaal and Apratim Dey and Yiting He and Yiqiao Zhong and Junjie Hu},
   year={2024},
   journal={arXiv preprint arXiv:2410.07553},
+  url={https://arxiv.org/abs/2410.07553}
 }
 
 @article{tim2025,
@@ -15,6 +16,7 @@
   author={Timothy Ossowski and Jixuan Chen and Danyal Maqbool and Zefan Cai and Tyler J. Bradshaw and Junjie Hu},
   year={2024},
   journal={arXiv preprint arXiv:2410.07553},
+  url={https://arxiv.org/abs/2410.07553}
 }
 
 @article{zhang2024pyramidkv,
@@ -22,7 +24,17 @@
   title={PyramidKV: Dynamic KV Cache Compression based on Pyramidal Information Funneling},
   author={Cai, Zefan and Zhang, Yichi and Gao, Bofei and Liu, Tianyu and Lu, Keming and Xiong, Wayne and Dong, Yue and Hu, Junjie and Xiao, Wen},
   journal={arXiv preprint arXiv:2406.02069},
+  url={https://arxiv.org/abs/2406.02069},
   year={2024}
+}
+
+@article{shuyin2024,
+  abbr = "arXiv",
+  title={Large Language Models Are Active Critics in NLG Evaluation},
+  author={Shuying Xu and Junjie Hu and Ming Jiang},
+  year={2024},
+  journal={arXiv preprint arXiv:2410.10724},
+  url={https://arxiv.org/abs/2410.10724},
 }
 
 @article{ossowski2024prompting,
