--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@ Mitigating Fine-tuning based Jailbreak Attack with Backdoor Enhanced Safety Alig
   abbr = "NeurIPS",
   url = "https://arxiv.org/pdf/2402.14968.pdf",
   title={Mitigating Fine-tuning based Jailbreak Attack with Backdoor Enhanced Safety Alignment},
-  author={Wang, Jiongxiao and Li, Jiazhao and Li, Yiquan and Qi, Xiangyu and Chen, Muhao and Hu, Junjie and Li, Yixuan and Li, Bo and Xiao, Chaowei},
+  author={Wang, Jiongxiao and Li, Jiazhao and Li, Yiquan and Qi, Xiangyu and Hu, Junjie and Li, Yixuan and McDaniel, Patrick and Chen, Muhao and Li, Bo and Xiao, Chaowei},
   year={2024},
   booktitle = {Proceedings of the Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS)}
 }
