--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,13 +1,23 @@
 ---
 ---
 
+@article{yao2024no,
+  abbr = "arXiv",
+  title={No Preference Left Behind: Group Distributional Preference Optimization},
+  author={Yao, Binwei and Cai, Zefan and Chuang, Yun-Shiuan and Yang, Shanglin and Jiang, Ming and Yang, Diyi and Hu, Junjie},
+  journal={arXiv preprint arXiv:2412.20299},
+  url={https://arxiv.org/pdf/2412.20299},
+  year={2024}
+}
+
 @article{uppaal2025,
   abbr = "arXiv",
-  title={DeTox: Toxic Subspace Projection for Model Editing},
+  title={Model Editing as a Robust and Denoised variant of DPO: A Case Study on Toxicity},
   author={Rheeya Uppaal and Apratim Dey and Yiting He and Yiqiao Zhong and Junjie Hu},
   year={2024},
-  journal={arXiv preprint arXiv:2410.07553},
-  url={https://arxiv.org/abs/2410.07553}
+  journal={arXiv preprint arXiv:2405.13967},
+  url={https://arxiv.org/pdf/2405.13967},
+  code={https://github.com/Uppaal/detox-edit}
 }
 
 @article{tim2025,
@@ -16,7 +26,7 @@
   author={Timothy Ossowski and Jixuan Chen and Danyal Maqbool and Zefan Cai and Tyler J. Bradshaw and Junjie Hu},
   year={2024},
   journal={arXiv preprint arXiv:2410.07553},
-  url={https://arxiv.org/abs/2410.07553}
+  url={https://arxiv.org/pdf/2410.07553}
 }
 
 @article{zhang2024pyramidkv,
@@ -24,8 +34,9 @@
   title={PyramidKV: Dynamic KV Cache Compression based on Pyramidal Information Funneling},
   author={Cai, Zefan and Zhang, Yichi and Gao, Bofei and Liu, Tianyu and Lu, Keming and Xiong, Wayne and Dong, Yue and Hu, Junjie and Xiao, Wen},
   journal={arXiv preprint arXiv:2406.02069},
-  url={https://arxiv.org/abs/2406.02069},
-  year={2024}
+  url={https://arxiv.org/pdf/2406.02069},
+  year={2024},
+  code = {https://github.com/Zefan-Cai/KVCache-Factory}
 }
 
 @article{shuyin2024,
