--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,24 @@
 ---
 ---
 
-Mitigating Fine-tuning based Jailbreak Attack with Backdoor Enhanced Safety Alignment
+
+@inproceedings{yao2025GDPO,
+  abbr = "ICLR",
+  title={No Preference Left Behind: Group Distributional Preference Optimization},
+  author={Yao, Binwei and Cai, Zefan and Chuang, Yun-Shiuan and Yang, Shanglin and Jiang, Ming and Yang, Diyi and Hu, Junjie},
+  booktitle={The Thirteenth International Conference on Learning Representations},
+  year={2025},
+  url={https://openreview.net/forum?id=bgpNJBD6Va}
+}
+
+@inproceedings{uppaal2025,
+  abbr = "ICLR",
+  title={Model Editing as a Robust and Denoised variant of DPO: A Case Study on Toxicity},
+  author={Rheeya Uppaal and Apratim Dey and Yiting He and Yiqiao Zhong and Junjie Hu},
+  booktitle={The Thirteenth International Conference on Learning Representations},
+  year={2025},
+  url={https://openreview.net/forum?id=lOi6FtIwR8}
+}
 
 @inproceedings{wang2024,
   abbr = "NeurIPS",
