--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,6 +1,40 @@
 ---
 ---
+@article{chuang2025probing,
+  abbr = "arXiv",
+  title={Probing LLM World Models: Enhancing Guesstimation with Wisdom of Crowds Decoding},
+  author={Chuang, Yun-Shiuan and Harlalka, Nikunj and Narendran, Sameer and Cheung, Alexander and Gao, Sizhe and Suresh, Siddharth and Hu, Junjie and Rogers, Timothy T},
+  journal={arXiv preprint arXiv:2501.17310},
+  url={https://arxiv.org/pdf/2501.17310},
+  year={2025}
+}
 
+@article{luo2025headinfer,
+  abbr = "arXiv",
+  title={Headinfer: Memory-efficient llm inference by head-wise offloading},
+  author={Luo, Cheng and Cai, Zefan and Sun, Hanshi and Xiao, Jinqi and Yuan, Bo and Xiao, Wen and Hu, Junjie and Zhao, Jiawei and Chen, Beidi and Anandkumar, Anima},
+  journal={arXiv preprint arXiv:2502.12574},
+  url={https://arxiv.org/pdf/2502.12574},
+  year={2025}
+}
+
+@article{huang2025visualtoolagent,
+  abbr = "arXiv",
+  title={VisualToolAgent (VisTA): A Reinforcement Learning Framework for Visual Tool Selection},
+  author={Huang, Zeyi and Ji, Yuyang and Rajan, Anirudh Sundara and Cai, Zefan and Xiao, Wen and Hu, Junjie and Lee, Yong Jae},
+  journal={arXiv preprint arXiv:2505.20289},
+  url={https://arxiv.org/pdf/2505.20289},
+  year={2025}
+}
+
+@article{cai2025r,
+  abbr = "arXiv",
+  title={R-KV: Redundancy-aware KV Cache Compression for Training-Free Reasoning Models Acceleration},
+  author={Cai, Zefan and Xiao, Wen and Sun, Hanshi and Luo, Cheng and Zhang, Yikai and Wan, Ke and Li, Yucheng and Zhou, Yeyang and Chang, Li-Wen and Gu, Jiuxiang and others},
+  journal={arXiv preprint arXiv:2505.24133},
+  url={https://arxiv.org/pdf/2505.24133},
+  year={2025}
+}
 
 @article{tim2025,
   abbr = "arXiv",
