--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,17 @@
 ---
 
 
+@inproceedings{wang2025MALOT,
+  abbr = "ICML",
+  title={MA-LoT: Multi-Agent Lean-based Long Chain-of-Thought Reasoning enhances Formal Theorem Proving},
+  author={Ruida Wang and Rui Pan and Yuxin Li and Jipeng Zhang and Yizhen Jia and Shizhe Diao and Renjie Pi and Junjie Hu and Tong Zhang},  
+  booktitle={The Forty-Second International Conference on Machine Learning},
+  year={2025},
+  url={https://arxiv.org/abs/2503.03205}
+}
+
+
+
 @inproceedings{yao2025GDPO,
   abbr = "ICLR",
   title={No Preference Left Behind: Group Distributional Preference Optimization},
