--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -30,7 +30,7 @@
 @article{cai2025r,
   abbr = "arXiv",
   title={R-KV: Redundancy-aware KV Cache Compression for Training-Free Reasoning Models Acceleration},
-  author={Cai, Zefan and Xiao, Wen and Sun, Hanshi and Luo, Cheng and Zhang, Yikai and Wan, Ke and Li, Yucheng and Zhou, Yeyang and Chang, Li-Wen and Gu, Jiuxiang and others},
+  author={Cai, Zefan and Xiao, Wen and Sun, Hanshi and Luo, Cheng and Zhang, Yikai and Wan, Ke and Li, Yucheng and Zhou, Yeyang and Chang, Li-Wen and Gu, Jiuxiang and Dong, Zhen and Anandkumar, Anima and Asi, Abedelkadir and Hu, Junjie },
   journal={arXiv preprint arXiv:2505.24133},
   url={https://arxiv.org/pdf/2505.24133},
   year={2025}
