--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
-
+@inproceedings{zhang2024pyramidkv,
+  abbr = "COLM",
+  title={PyramidKV: Dynamic KV Cache Compression based on Pyramidal Information Funneling},
+  author={Cai, Zefan and Zhang, Yichi and Gao, Bofei and Liu, Tianyu and Lu, Keming and Xiong, Wayne and Dong, Yue and Hu, Junjie and Xiao, Wen},
+  booktitle={The Second Conference of Language Modeling 2024},
+  url={https://arxiv.org/pdf/2406.02069},
+  year={2025},
+  code = {https://github.com/Zefan-Cai/KVCache-Factory}
+}
 
 @inproceedings{wang2025MALOT,
   abbr = "ICML",
