--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,19 @@
 ---
 ---
-@inproceedings{zhang2024pyramidkv,
+@article{tim2025comma,
+  abbr = "TMLR",
+  title={{COMMA}: A Communicative Multimodal Multi-Agent Benchmark},
+  author={Timothy Ossowski and Danyal Maqbool and Jixuan Chen and Zefan Cai and Tyler J. Bradshaw and Junjie Hu},
+  journal={Transactions on Machine Learning Research (Accepted)},
+  year={2025},
+  url={https://openreview.net/forum?id=TIGQIem1na},
+}
+
+@inproceedings{zhang2025pyramidkv,
   abbr = "COLM",
   title={PyramidKV: Dynamic KV Cache Compression based on Pyramidal Information Funneling},
   author={Cai, Zefan and Zhang, Yichi and Gao, Bofei and Liu, Tianyu and Lu, Keming and Xiong, Wayne and Dong, Yue and Hu, Junjie and Xiao, Wen},
-  booktitle={The Second Conference of Language Modeling 2024},
+  booktitle={The Second Conference of Language Modeling},
   url={https://arxiv.org/pdf/2406.02069},
   year={2025},
   code = {https://github.com/Zefan-Cai/KVCache-Factory}
