--- a/_bibliography/preprint.bib
+++ b/_bibliography/preprint.bib
@@ -1,5 +1,21 @@
 ---
 ---
+@article{zhang2025scaling,
+  abbr = "arXiv",
+  title={Scaling Up Audio-Synchronized Visual Animation: An Efficient Training Paradigm},
+  author={Zhang, Lin and Cai, Zefan and Zhou, Yufan and Mo, Shentong and Lin, Jinhong and Wu, Cheng-En and Wei, Yibing and Zhang, Yijing and Zhang, Ruiyi and Xiao, Wen and others},
+  journal={arXiv preprint arXiv:2508.03955},
+  year={2025}
+}
+
+@article{zhao2025mentor,
+  abbr = "arXiv",
+  title={MENTOR: Efficient Multimodal-Conditioned Tuning for Autoregressive Vision Generation Models},
+  author={Zhao, Haozhe and Cai, Zefan and Si, Shuzheng and Chen, Liang and Gu, Jiuxiang and Xiao, Wen and Hu, Junjie},
+  journal={arXiv preprint arXiv:2507.09574},
+  year={2025}
+}
+
 @article{chuang2025probing,
   abbr = "arXiv",
   title={Probing LLM World Models: Enhancing Guesstimation with Wisdom of Crowds Decoding},
