--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,24 @@
 ---
 ---
+@inproceedings{wang2025vseam,
+  abbr = "EMNLP",
+  title={V-SEAM: Visual Semantic Editing and Attention Modulating for Causal Interpretability of Vision-Language Models},
+  author={Wang, Qidong and Hu, Junjie and Jiang, Ming},
+  year={2025},
+  booktitle = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  publisher = "Association for Computational Linguistics"
+}
+
+@inproceedings{chuang2025probing,
+  abbr = "EMNLP",
+  title={Probing LLM World Models: Enhancing Guesstimation with Wisdom of Crowds Decoding},
+  author={Chuang, Yun-Shiuan and Harlalka, Nikunj and Narendran, Sameer and Cheung, Alexander and Gao, Sizhe and Suresh, Siddharth and Hu, Junjie and Rogers, Timothy T},
+  url={https://arxiv.org/pdf/2501.17310},
+  year={2025},
+  booktitle = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  publisher = "Association for Computational Linguistics"
+}
+
 @article{tim2025comma,
   abbr = "TMLR",
   title={{COMMA}: A Communicative Multimodal Multi-Agent Benchmark},
