--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,11 @@
 ---
 ---
-@inproceedings{cai2025rkv 
+@inproceedings{cai2025rkv, 
   abbr = "NeurIPS",
   title={R-KV: Redundancy-aware KV Cache Compression for Training-Free Reasoning Models Acceleration},
   author={Cai, Zefan and Xiao, Wen and Sun, Hanshi and Luo, Cheng and Zhang, Yikai and Wan, Ke and Li, Yucheng and Zhou, Yeyang and Chang, Li-Wen and Gu, Jiuxiang and Dong, Zhen and Anandkumar, Anima and Asi, Abedelkadir and Hu, Junjie },
   url={https://arxiv.org/pdf/2505.24133},
-  booktitle = {Proceedings of the Thirty-ninth Annual Conference on Neural Information Processing Systems (NeurIPS) 2025},
+  booktitle={Proceedings of the Thirty-ninth Annual Conference on Neural Information Processing Systems (NeurIPS) 2025},
   year={2025}
 }
 
