--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,7 @@
 ---
 ---
-@article{cai2026from,
+
+@article{cai2026videobias,
   abbr = "TMLR",
   title={From Preferences to Prejudice: The Role of Alignment Tuning in Shaping Social Bias in Video Diffusion Models},
   author={Zefan Cai and Haoyi Qiu and Haozhe Zhao and Ke Wan and Jiachen Li and Jiuxiang Gu and Wen Xiao and Nanyun Peng and Junjie Hu},
